Revert "fix dropdown gap"
This reverts commit 061dfd237ca5703dd89d3d40a2651307b65052ea.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,10 +56,12 @@
 
 .form-modal_dropdown-menu {
   max-width: none;
+  top: 54px !important;
 }
 
 .dropdown-menu-bottom {
   max-width: none;
+  bottom: 54px !important;
   top: auto !important;
 }
 
